# automation-platform

./: .env  .gitignore  compose.override.yml  compose.test.yml  compose.yml  walkthrough
app/backend/: Dockerfile  Dockerfile.old  alembic.ini  celery_worker.sh  pyproject.toml
app/backend/migrations/: env.py
app/backend/migrations/versions/: 6d3b7f86af99_add_workflow_and_task_notification_.py
app/backend/src/laf/: app.py  config.py  database_setp.sql  k8s_client.py  main.py  models.py  notification_listenter.py  tasks.py  webhook_handler.py
app/backend/src/laf/api/: dependencies.py  main.py
app/backend/src/laf/api/v1/: __init__.py  tasks.py  webhooks.py  workflows.py
app/backend/src/laf/core/: config.py  database.py
app/backend/src/laf/models/: database.py
app/backend/src/laf/schemas/: execute_biovia_experiment.py  operate_centrifuge.py  request_approval.py  result.py  task.py  task_schema.json  workflow.py  workflow_schema.json
app/backend/src/laf/services/clients/: docker_client.py  k8s_client.py
app/backend/src/laf/services/handlers/: notification_listener.py
app/backend/src/laf/tasks/: celery_app.py  workers.py
app/backend/src/laf/workflows/: coordinator.py
app/backend/src/temp/: app.py  calculate_potency.py  docker_client.py  models.py  operate_incubator.py  task_executor.py  workflow_coordinator.py
app/backend/src/temp/schemas/: operate_robot_arm.py
app/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  LabVisual.tsx  WorkflowList.tsx  global.d.ts
app/instruments/instrument-a/: Dockerfile  app.py
app/instruments/instrument-b/: app.py
app/simulated-tasks/mobile-phase-prep/: Dockerfile
app/testing/: compose.test.yml
docs/: overview.md  recipe-creation.md  todos.md  workflow-execution.md
docs/automation platform/lab-automation/: merck_platform.md
docs/notes/: automation_platform_overview.md
docs/notes/lab-automation/: lab-automation-framework.md  platforms.md
scripts/: chat.md  create_from_chat.py
(+5 files in other folders)
