[tool.poetry]
name = "laf"
version = "0.1.0"
description = "Laboratory Automation Framework Backend"
authors = ["Brent Maranzano <brent_maranzano@gmail.com>"]

[[tool.poetry.packages]]
include = "laf"
from = "src"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^1.4.0"
fastapi-sqlalchemy = "^0.2.1"
psycopg2-binary = "^2.9.5"
celery = {extras = ["redis"], version = "^5.2.7"}
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
